--- a/css/style-app.css
+++ b/css/style-app.css
@@ -44,7 +44,8 @@ body {
 }
 
 .todoapp {
-    background: #fff;
+    color: #fff;
+    background: #009688;
     margin: 130px 0 40px 0;
     position: relative;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
@@ -103,8 +104,9 @@ body {
 
 .new-todo {
     padding: 16px 16px 16px 60px;
-    border: none;
-    background: rgba(0, 0, 0, 0.003);
+    padding: 16px 16px 16px 60px;
+    border: 4px solid #d5d5d5;
+    background: #607D8B;
     box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 
